[package]
name = "jsonwebtoken_wasm"
version = "9.2.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way."
homepage = "https://github.com/Keats/jsonwebtoken"
repository = "https://github.com/Keats/jsonwebtoken"
keywords = ["jwt", "api", "token", "jwk"]
edition = "2021"
include = [
    "src/**/*",
    "benches/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
rust-version = "1.67.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
# For PEM decoding
pem = { version = "3", optional = true }
ed25519-dalek = { version = "1.0.1", optional = true }
simple_asn1 = { version = "0.6", optional = true }
getrandom = {version = "0.2", default-features = false, features = ["custom"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.17.4", features = ["std"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = {version = "0.3", optional = true }
ring = { version = "0.17.4", features = ["std", "wasm32_unknown_unknown_js"], optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.1"

[target.'cfg(not(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi")))))'.dev-dependencies]
# For the custom time example
time = { version = "0.3" } 
criterion = { version = "0.4" }

[target.'cfg(all(target_arch = "wasm32", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
# For the custom time example
time = { version = "0.3", features = ["wasm-bindgen"] }
criterion = { version = "0.4", default-features = false }

[features]
default = ["ptd", "pem"]
use_pem = ["pem"]
ptd = ["ed25519-dalek"]

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
